--- a/package.json
+++ b/package.json
@@ -9,23 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.2.0",
+    "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/card": "^2.0.34",
     "@nextui-org/input": "^2.2.5",
+    "@nextui-org/pagination": "^2.0.36",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/spacer": "^2.0.33",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.17",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.460.0",
     "mongoose": "^8.8.2",
     "nanoid": "^5.0.8",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
+    "pdf-lib": "^1.17.1",
     "qr-code-styling": "^1.8.4",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
@@ -33,8 +46,14 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-paginate": "^8.2.0",
     "react-toastify": "^10.0.6",
-    "validator": "^13.12.0"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.12.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
