--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
@@ -43,6 +46,7 @@
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
