--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -82,6 +83,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
